crates/claptrap-core/tests/snapshots/tests__arg__it_fails_when_not_allow_hyphen_values.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_5d71b639'
[1m[31merror:[0m unexpected argument '[33m-f[0m' found

[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_5d71b639
exit 1
