crates/claptrap-core/tests/snapshots/tests__arg__last-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_first='one'
claptrap_third='three'
