crates/claptrap-core/tests/snapshots/tests__arg__long-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_cfg='file.toml'
