crates/claptrap-core/tests/snapshots/tests__arg__long_help.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: output
---
command cat <<'EOF_293ce70b'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--config[0m <cfg>
          The config file used by the myprog must be in JSON format with only
          valid keys and may not contain other nonsense that cannot be read by
          this program. Obviously I'm going on and on, so I'll stop now.

  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')
EOF_293ce70b
exit 0
