crates/claptrap-core/tests/snapshots/tests__arg__num_args-default_missing_value2.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_mode='slow'
